force-app/main/default/objects/Dispositions__c/Dispositions__c.object-meta.xml
<CustomObject>
    <label>Dispositions</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Dispositions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>