force-app/main/default/objects/Dispositions__c/fields/ABHI_Retry__c.field-meta.xml
<CustomField>
    <fullName>ABHI_Retry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>