force-app/main/default/objects/Dispositions__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>