force-app/main/default/objects/Dispositions__c/fields/AgentDialTime__c.field-meta.xml
<CustomField>
    <fullName>AgentDialTime__c</fullName>
    <label>Agent Dial Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>