force-app/main/default/objects/Dispositions__c/fields/AgentRingTime__c.field-meta.xml
<CustomField>
    <fullName>AgentRingTime__c</fullName>
    <label>Agent Ring Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>