force-app/main/default/objects/Dispositions__c/fields/AgentTalkTime__c.field-meta.xml
<CustomField>
    <fullName>AgentTalkTime__c</fullName>
    <label>Agent Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>