force-app/main/default/objects/Dispositions__c/fields/Call_Dispose_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Dispose_Time__c</fullName>
    <label>Call DisposeTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>