force-app/main/default/objects/Dispositions__c/fields/Callback_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Callback_Datetime__c</fullName>
    <label>Callback Datetime</label>
    <type>DateTime</type>
</CustomField>