force-app/main/default/objects/Dispositions__c/fields/callDisposeTime__c.field-meta.xml
<CustomField>
    <fullName>callDisposeTime__c</fullName>
    <label>Call Dispose Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>