force-app/main/default/objects/Dispositions__c/fields/Calling_Mode__c.field-meta.xml
<CustomField>
    <fullName>Calling_Mode__c</fullName>
    <label>Calling Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Predictive</fullName>
            </value>
            <value>
                <fullName>Progressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>