force-app/main/default/objects/Dispositions__c/fields/Calling_Source__c.field-meta.xml
<CustomField>
    <fullName>Calling_Source__c</fullName>
    <description>Indicates where the call is made from - BOT, Ubona dialer etc.</description>
    <label>Calling Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>