force-app/main/default/objects/Dispositions__c/fields/Calling_Unit__c.field-meta.xml
<CustomField>
    <fullName>Calling_Unit__c</fullName>
    <label>Calling Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>