force-app/main/default/objects/Dispositions__c/fields/callStatus__c.field-meta.xml
<CustomField>
    <fullName>callStatus__c</fullName>
    <label>Call Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>