force-app/main/default/objects/Dispositions__c/fields/campaignId__c.field-meta.xml
<CustomField>
    <fullName>campaignId__c</fullName>
    <label>Campaign Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>