force-app/main/default/objects/Dispositions__c/fields/customDisposition__c.field-meta.xml
<CustomField>
    <fullName>customDisposition__c</fullName>
    <label>Custom Disposition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>