force-app/main/default/objects/Dispositions__c/fields/customerInfo__c.field-meta.xml
<CustomField>
    <fullName>customerInfo__c</fullName>
    <label>Customer Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>