force-app/main/default/objects/Dispositions__c/fields/CustomerTalkTime__c.field-meta.xml
<CustomField>
    <fullName>CustomerTalkTime__c</fullName>
    <label>Customer Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>