force-app/main/default/objects/Dispositions__c/fields/Dashboard_Category__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Category__c</fullName>
    <label>Dashboard Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>