force-app/main/default/objects/Dispositions__c/fields/Dashboard_Category_with_Status__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Category_with_Status__c</fullName>
    <formula>IF (
  Dashboard_Category__c == &quot;Total Paid Confirmation Received&quot;,
  IF (
    OR(TEXT(Renewal_Request__r.StageName) == &apos;Paid&apos;, TEXT(Renewal_Request__r.StageName) == &apos;Closed Won&apos;),
    &quot;Total Paid confirmation received -but policy Issued&quot;,
    IF (
      OR(TEXT(Renewal_Request__r.StageName) == &apos;Open&apos;, TEXT(Renewal_Request__r.StageName) == &apos;In Progress&apos;),
      &quot;Total Paid confirmation received -but policy not Issued&quot;,
      &quot;&quot;
    )
  ),
  IF (
    Dashboard_Category__c == &quot;Total Paid on call&quot;,
    IF (
      OR(TEXT(Renewal_Request__r.StageName) == &apos;Paid&apos;, TEXT(Renewal_Request__r.StageName) == &apos;Closed Won&apos;),
      &quot;Total Paid on call - but policy Issued&quot;,
      IF (
        OR(TEXT(Renewal_Request__r.StageName) == &apos;Open&apos;, TEXT(Renewal_Request__r.StageName) == &apos;In Progress&apos;),
        &quot;Total Paid on call - but policy not Issued&quot;,
        &quot;&quot;
      )
    ),
    Dashboard_Category__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dashboard Category with Status</label>
    <type>Text</type>
</CustomField>