force-app/main/default/objects/Dispositions__c/fields/Disposition_L1__c.field-meta.xml
<CustomField>
    <fullName>Disposition_L1__c</fullName>
    <label>Disposition L1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>