force-app/main/default/objects/Dispositions__c/fields/Disposition_L2__c.field-meta.xml
<CustomField>
    <fullName>Disposition_L2__c</fullName>
    <label>Disposition L2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>