force-app/main/default/objects/Dispositions__c/fields/Disposition_L3__c.field-meta.xml
<CustomField>
    <fullName>Disposition_L3__c</fullName>
    <label>Disposition L3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>