force-app/main/default/objects/Dispositions__c/fields/hangupCauseCode__c.field-meta.xml
<CustomField>
    <fullName>hangupCauseCode__c</fullName>
    <label>Hangup Cause Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>