force-app/main/default/objects/Dispositions__c/fields/hangupReason__c.field-meta.xml
<CustomField>
    <fullName>hangupReason__c</fullName>
    <label>Hangup Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>