force-app/main/default/objects/Dispositions__c/fields/hangupTime__c.field-meta.xml
<CustomField>
    <fullName>hangupTime__c</fullName>
    <label>Hangup Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>