force-app/main/default/objects/Dispositions__c/fields/ivrLanguage__c.field-meta.xml
<CustomField>
    <fullName>ivrLanguage__c</fullName>
    <label>Ivr Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>