force-app/main/default/objects/Dispositions__c/fields/ivrSkill__c.field-meta.xml
<CustomField>
    <fullName>ivrSkill__c</fullName>
    <label>Ivr Skill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>