force-app/main/default/objects/Dispositions__c/fields/ivrTime1__c.field-meta.xml
<CustomField>
    <fullName>ivrTime1__c</fullName>
    <label>Ivr Time1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>