force-app/main/default/objects/Dispositions__c/fields/ivrTime2__c.field-meta.xml
<CustomField>
    <fullName>ivrTime2__c</fullName>
    <label>Ivr Time2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>