force-app/main/default/objects/Dispositions__c/fields/MSCRM_ID__c.field-meta.xml
<CustomField>
    <fullName>MSCRM_ID__c</fullName>
    <description>ID from MS Dynamics CRM - used for tracking migrated data</description>
    <externalId>true</externalId>
    <label>MSCRM ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>