force-app/main/default/objects/Dispositions__c/fields/Msisdn__c.field-meta.xml
<CustomField>
    <fullName>Msisdn__c</fullName>
    <label>Msisdn new</label>
    <length>100</length>
    <type>Text</type>
</CustomField>