force-app/main/default/objects/Dispositions__c/fields/Next_Call_Back_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Back_Date_Time__c</fullName>
    <label>Next Call Back Date Time</label>
    <type>DateTime</type>
</CustomField>