force-app/main/default/objects/Dispositions__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Dispositions</relationshipLabel>
    <relationshipName>Dispositions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>