force-app/main/default/objects/Dispositions__c/fields/Recording_Url__c.field-meta.xml
<CustomField>
    <fullName>Recording_Url__c</fullName>
    <label>Recording Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>