force-app/main/default/objects/Dispositions__c/fields/Renewal_Request__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Request</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Dispositions</relationshipLabel>
    <relationshipName>Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>