force-app/main/default/objects/Dispositions__c/fields/requestId__c.field-meta.xml
<CustomField>
    <fullName>requestId__c</fullName>
    <label>Request Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>