force-app/main/default/objects/Dispositions__c/fields/Ringing_Time__c.field-meta.xml
<CustomField>
    <fullName>Ringing_Time__c</fullName>
    <label>Ringing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>