force-app/main/default/objects/Dispositions__c/fields/scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>scheduled_Time__c</fullName>
    <label>scheduled Time</label>
    <type>DateTime</type>
</CustomField>