force-app/main/default/objects/Dispositions__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>