force-app/main/default/objects/Dispositions__c/fields/waittime__c.field-meta.xml
<CustomField>
    <fullName>waittime__c</fullName>
    <label>Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>